# platform

./: .gitignore  CLA.md  LICENSE.md  Makefile  README.md  alembic.ini  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_update_agenttype_enum.py  002_agents_tenant_id_nullable.py  003_threads_messages_refactor.py  004_agent_model_extend.py  005_base_entity_timestamps.py  006_message_metadata.py
app/: Dockerfile  main.py
app/api/: router.py
app/core/: database.py  deps.py
app/integrations/: base.py  bootstrap.py  models.py  registry.py  specs.py
app/modules/agent_runtime/: __init__.py  checkpointer.py  deps.py  message_queue.py  service.py
app/modules/agents/: __init__.py  bootstrap.py  deps.py  models.py  router.py  schemas.py  service.py
app/modules/events/: __init__.py  deps.py  models.py  service.py
app/modules/integrations/: __init__.py  deps.py  models.py  router.py  service.py
app/modules/secrets/: base.py  bootstrap.py  deps.py  vault.py
app/modules/tenants/: __init__.py  deps.py  models.py  router.py  schemas.py  service.py
app/modules/threads/: __init__.py  deps.py  langchain_service.py  models.py  router.py  schemas.py  service.py
docs/: index.md  migrations.md
docs/integrations/: index.md
docs/modules/: index.md
docs/secrets/: vault-langchain.md
infra/docker/: .env  .env.example  docker-compose.yml
infra/docker/clickhouse/: init.sql
migrations/: __init__.py  runner.py
migrations/data_migrations/: 001_migrate_user_data.py  __init__.py
scripts/: db_health_check.py  migrate.py
(+11 files in other folders)
