[project]
name = "lorecore"
description = "Knowledge OS"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "alembic",
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "asyncpg",
    "pydantic>=2",
    "httpx",
    "hvac",
    "clickhouse-connect",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
